FilmorateApp Sprint 10: commit after first review refactor: выделить валидационные методы в отдельный классы FilmValidator и UserValidator refactor: убрать лишний метод getFilmById из FilmService refactor: убрать лишний метод getUserById из UserService refactor: сделать возврат Film в методах по добавлению и удалению лайков refactor: сделать возврат списка User в методах по добавлению и удалению друзей refactor: переделать метод getUsersList через Stream API refactor: добавить проверку на то, что User поставил лайк фильму в методе dislikeFilm класса FilmService и обвязать сценарий тестом style: переименовать тестовые методы по шаблону shouldReturn{}On{}When{}