@@ -9,10 +9,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.web.servlet.MockMvc;
-import ru.yandex.practicum.filmorate.exceptions.FilmDoesNotExistException;
-import ru.yandex.practicum.filmorate.exceptions.FilmValidationException;
-import ru.yandex.practicum.filmorate.exceptions.IncorrectParameterException;
-import ru.yandex.practicum.filmorate.exceptions.UserDoesNotExistException;
+import ru.yandex.practicum.filmorate.exceptions.*;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.User;
 
@@ -22,7 +19,7 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.List;
 
 @SpringBootTest
 @AutoConfigureMockMvc
@@ -43,7 +40,7 @@ public class FilmControllerTest {
     // Проверка получения списка всех фильмов
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidFilmWhenGetThenStatus200andListReturned() throws Exception {
+    public void shouldReturn200andListOnGetAllWhenValidFilm() throws Exception {
         //given
         postValidFilm();
 
@@ -54,7 +51,7 @@ public class FilmControllerTest {
 
                 //then
                 .andExpect(status().isOk())
-                .andExpect(content().json(objectMapper.writeValueAsString(Arrays.asList(VALID_FILM))))
+                .andExpect(content().json(objectMapper.writeValueAsString(List.of(VALID_FILM))))
                 .andExpect(jsonPath("$.length()").value(1))
                 .andExpect(jsonPath("$[0].id").value(1))
                 .andExpect(jsonPath("$[0].name").value("film"))
@@ -66,7 +63,7 @@ public class FilmControllerTest {
     // Проверка добавления валидного фильма
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidFilmWhenPostThenStatus200andFilmReturned() throws Exception {
+    public void shouldReturn200andFilmOnPostFilmWhenValidFilm() throws Exception {
         //when
         mockMvc.perform(
                 post("/films")
@@ -86,7 +83,7 @@ public class FilmControllerTest {
     // Проверка обновления валидного фильма
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidFilmWhenPutThenStatus200andFilmReturned() throws Exception {
+    public void shouldReturn200andFilmOnPutFilmWhenValidFilm() throws Exception {
         //given
         postValidFilm();
 
@@ -110,7 +107,7 @@ public class FilmControllerTest {
 
     // Проверка добавления фильма с датой релиза ранее 28 декабря 1895 года (ожидается статус 400 Bad Request и FilmValidationException)
     @Test
-    public void givenFilmWithWrongDateWhenPostThenStatus400andFilmValidationException() throws Exception {
+    public void shouldReturn400OnPostFilmWhenInvalidFilmRelease() throws Exception {
         //given
         Film film = new Film(1, "film", RandomString.make(200), RELEASE_DATE.minusDays(1), 1);
 
@@ -131,7 +128,7 @@ public class FilmControllerTest {
     // Проверка обновления фильма с датой релиза ранее 28 декабря 1895 года (ожидается статус 400 Bad Request и FilmValidationException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenFilmWithWrongDateWhenPutThenStatus400andFilmValidationException() throws Exception {
+    public void shouldReturn400OnPutFilmWhenInvalidFilmRelease() throws Exception {
         //given
         postValidFilm();
 
@@ -154,7 +151,7 @@ public class FilmControllerTest {
     // Проверка обновления фильма с несуществующим id (ожидается статус 404 Not Found и FilmDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenNonExistentFilmWhenPutThenStatus404andFilmDoesNotExistException() throws Exception {
+    public void shouldReturn404OnPutFilmWhenInvalidFilmId() throws Exception {
         //given
         postValidFilm();
 
@@ -176,7 +173,7 @@ public class FilmControllerTest {
 
     // Проверка добавления фильма с пустым названием (ожидается статус 400 Bad Request)
     @Test
-    public void givenFilmWithBlankNameWhenPostThenStatus400() throws Exception {
+    public void shouldReturn400OnPostFilmWhenBlankFilmName() throws Exception {
         //given
         Film film = new Film(1, "", RandomString.make(200), RELEASE_DATE, 1);
 
@@ -194,7 +191,7 @@ public class FilmControllerTest {
     // Проверка обновления фильма с пустым названием (ожидается статус 400 Bad Request)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenFilmWithBlankNameWhenPutThenStatus400() throws Exception {
+    public void shouldReturn400OnPutFilmWhenBlankFilmName() throws Exception {
         //given
         postValidFilm();
 
@@ -213,7 +210,7 @@ public class FilmControllerTest {
 
     // Проверка добавления фильма с длиной описания более 200 символов (ожидается статус 400 Bad Request)
     @Test
-    public void givenFilmWithLongDescriptionWhenPostThenStatus400() throws Exception {
+    public void shouldReturn400OnPostFilmWhenLongFilmDescription() throws Exception {
         //given
         Film film = new Film(1, "film", RandomString.make(201), RELEASE_DATE, 1);
 
@@ -231,7 +228,7 @@ public class FilmControllerTest {
     // Проверка обновления фильма с длиной описания более 200 символов (ожидается статус 400 Bad Request)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenFilmWithLongDescriptionWhenPutThenStatus400() throws Exception {
+    public void shouldReturn400OnPutFilmWhenLongFilmDescription() throws Exception {
         //given
         postValidFilm();
 
@@ -250,7 +247,7 @@ public class FilmControllerTest {
 
     // Проверка добавления фильма с датой релиза в будущем (ожидается статус 400 Bad Request)
     @Test
-    public void givenFilmWithFutureReleaseDateWhenPostThenStatus400() throws Exception {
+    public void shouldReturn400OnPostFilmWhenFutureFilmRelease() throws Exception {
         //given
         Film film = new Film(1, "film", RandomString.make(200), FUTURE_DATE, 1);
 
@@ -268,7 +265,7 @@ public class FilmControllerTest {
     // Проверка обновления фильма с датой релиза в будущем (ожидается статус 400 Bad Request)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenFilmWithFutureReleaseDateWhenPutThenStatus400() throws Exception {
+    public void shouldReturn400OnPutFilmWhenFutureFilmRelease() throws Exception {
         //given
         postValidFilm();
 
@@ -287,7 +284,7 @@ public class FilmControllerTest {
 
     // Проверка добавления фильма с отрицательной продолжительностью (ожидается статус 400 Bad Request)
     @Test
-    public void givenFilmWithNegativeDurationDateWhenPostThenStatus400() throws Exception {
+    public void shouldReturn400OnPostFilmWhenNegativeFilmDuration() throws Exception {
         //given
         Film film = new Film(1, "film", RandomString.make(200), RELEASE_DATE, -1);
 
@@ -305,7 +302,7 @@ public class FilmControllerTest {
     // Проверка обновления фильма с отрицательной продолжительностью (ожидается статус 400 Bad Request)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenFilmWithNegativeDurationWhenPutThenStatus400() throws Exception {
+    public void shouldReturn400OnPutFilmWhenNegativeFilmDuration() throws Exception {
         //given
         postValidFilm();
 
@@ -324,7 +321,7 @@ public class FilmControllerTest {
 
     // Проверка добавления фильма с нулевой продолжительностью (ожидается статус 400 Bad Request)
     @Test
-    public void givenFilmWithZeroDurationWhenPostThenStatus400() throws Exception {
+    public void shouldReturn400OnPostFilmWhenZeroFilmDuration() throws Exception {
         //given
         Film film = new Film(1, "film", RandomString.make(200), RELEASE_DATE, 0);
 
@@ -342,7 +339,7 @@ public class FilmControllerTest {
     // Проверка обновления фильма с нулевой продолжительностью (ожидается статус 400 Bad Request)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenFilmWithZeroDurationWhenPutThenStatus400() throws Exception {
+    public void shouldReturn400OnPutFilmWhenZeroFilmDuration() throws Exception {
         //given
         postValidFilm();
 
@@ -362,7 +359,7 @@ public class FilmControllerTest {
     // Проверка получения фильма по валидному id
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidIdWhenGetThenStatus200andFilmReturned() throws Exception {
+    public void shouldReturn200AndFilmOnGetFilmWhenValidFilm() throws Exception {
         //given
         postValidFilm();
         Integer id = 1;
@@ -384,7 +381,7 @@ public class FilmControllerTest {
     // Проверка получения фильма по неправильному id (ожидается статус 404 Not Found и FilmDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenInvalidIdWhenGetThenStatus404andFilmDoesNotExistException() throws Exception {
+    public void shouldReturn404OnGetFilmWhenInvalidFilmId() throws Exception {
         //given
         postValidFilm();
         Integer id = 2;
@@ -404,7 +401,7 @@ public class FilmControllerTest {
     // Проверка постановки лайка фильму
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidFilmAndUserWhenPutLikeThenStatus200andMessage() throws Exception {
+    public void shouldReturn200OnPutLikeWhenValidFilmIdAndUSerId() throws Exception {
         //given
         postValidFilm();
         postValidUser();
@@ -418,11 +415,10 @@ public class FilmControllerTest {
 
                 //then
                 .andExpect(status().isOk())
-                .andExpect(content().string("Пользователю с id 1 понравился фильм с id 1."));
-
-        mockMvc.perform(
-                        get("/films/{id}", filmId)
-                )
+                .andExpect(jsonPath("$.id").value(1))
+                .andExpect(jsonPath("$.name").value("film"))
+                .andExpect(jsonPath("$.releaseDate").value(RELEASE_DATE.toString()))
+                .andExpect(jsonPath("$.duration").value(1))
                 .andExpect(jsonPath("$.likes.length()").value(1))
                 .andExpect(jsonPath("$.likes[0]").value(1));
     }
@@ -430,7 +426,7 @@ public class FilmControllerTest {
     // Проверка постановки лайка фильму с неправильным id фильма (ожидается статус 404 Not Found и FilmDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenInvalidFilmIdWhenPutLikeThenStatus404andFilmDoesNotExistException() throws Exception {
+    public void shouldReturn404OnPutLikeWhenInvalidFilmIdAndUSerId() throws Exception {
         //given
         postValidFilm();
         postValidUser();
@@ -452,7 +448,7 @@ public class FilmControllerTest {
     // Проверка постановки лайка фильму с неправильным id пользователя (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenInvalidUserIdWhenPutLikeThenStatus404andUserDoesNotExistException() throws Exception {
+    public void shouldReturn404OnPutLikeWhenInvalidUserId() throws Exception {
         //given
         postValidFilm();
         postValidUser();
@@ -474,7 +470,7 @@ public class FilmControllerTest {
     // Проверка удаления лайка у фильма
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidFilmAndUserWhenDeleteLikeThenStatus200andMessage() throws Exception {
+    public void shouldReturn200AndFilmOnDeleteLikeWhenValidFilmIdAndUSerId() throws Exception {
         //given
         postValidFilm();
         postValidUser();
@@ -489,18 +485,39 @@ public class FilmControllerTest {
 
                 //then
                 .andExpect(status().isOk())
-                .andExpect(content().string("Пользователь с id 1 удалил лайк у фильма с id 1."));
-
-        mockMvc.perform(
-                        get("/films/{id}", filmId)
-                )
+                .andExpect(jsonPath("$.id").value(1))
+                .andExpect(jsonPath("$.name").value("film"))
+                .andExpect(jsonPath("$.releaseDate").value(RELEASE_DATE.toString()))
+                .andExpect(jsonPath("$.duration").value(1))
                 .andExpect(jsonPath("$.likes.length()").value(0));
+    }
+
+    // Проверка удаления лайка у фильма, которому пользователь лайк не ставил (ожидается статус 400 Bad Request и IncorrectPathVariableException)
+    @Test
+    @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
+    public void shouldReturn400OnDeleteLikeWhenUserDidNotLike() throws Exception {
+        //given
+        postValidFilm();
+        postValidUser();
+        Integer filmId = 1;
+        Integer userId = 1;
+
+        //when
+        mockMvc.perform(
+                        delete("/films/{id}/like/{userId}", filmId, userId)
+                )
+
+                //then
+                .andExpect(status().isBadRequest())
+                .andExpect(result -> assertTrue(result.getResolvedException() instanceof IncorrectPathVariableException))
+                .andExpect(result -> assertEquals("Пользователь с id 1 попытался удалить лайк у фильма с id 1, которому он не ставил лайк.",
+                        result.getResolvedException().getMessage()));
     }
 
     // Проверка удаление лайка у фильма с неправильным id фильма (ожидается статус 404 Not Found и FilmDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenInvalidFilmIdWhenDeleteLikeThenStatus404andFilmDoesNotExistException() throws Exception {
+    public void shouldReturn404OnDeleteLikeWhenInvalidFilmId() throws Exception {
         //given
         postValidFilm();
         postValidUser();
@@ -524,7 +541,7 @@ public class FilmControllerTest {
     // Проверка удаление лайка у фильма с неправильным id пользователя (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenInvalidUserIdWhenDeleteLikeThenStatus404andFilmDoesNotExistException() throws Exception {
+    public void shouldReturn404OnDeleteLikeWhenInvalidUserId() throws Exception {
         //given
         postValidFilm();
         postValidUser();
@@ -548,8 +565,38 @@ public class FilmControllerTest {
     // Проверка получения списка самых популярных фильмов
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidIdWhenGetPopularThenStatus200andListReturned() throws Exception {
+    public void shouldReturn200andListOnGetPopularWhenValidRequestParam() throws Exception {
         //given
+        postValidFilm();
+        postValidFilm();
+
+        //when
+        mockMvc.perform(
+                        get("/films/popular")
+                                .param("count", "1")
+                )
+
+                //then
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()").value(1))
+                .andExpect(content().json(objectMapper.writeValueAsString(List.of(VALID_FILM))));
+    }
+
+    // Проверка получения списка самых популярных фильмов без параметра запросов
+    @Test
+    @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
+    public void shouldReturn200andListOf10OnGetPopularWhenNoRequestParam() throws Exception {
+        //given
+        postValidFilm();
+        postValidFilm();
+        postValidFilm();
+        postValidFilm();
+        postValidFilm();
+        postValidFilm();
+        postValidFilm();
+        postValidFilm();
+        postValidFilm();
+        postValidFilm();
         postValidFilm();
 
         //when
@@ -559,13 +606,13 @@ public class FilmControllerTest {
 
                 //then
                 .andExpect(status().isOk())
-                .andExpect(content().json(objectMapper.writeValueAsString(Arrays.asList(VALID_FILM))));
+                .andExpect(jsonPath("$.length()").value(10));
     }
 
     // Проверка получения списка самых популярных фильмов c нулевым count (ожидается статус 400 Bad Request и IncorrectParameterException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenZeroCountWhenGetPopularThenStatus400andIncorrectParameterException() throws Exception {
+    public void shouldReturn400andListOnGetPopularWhenZeroRequestParam() throws Exception {
         //given
         postValidFilm();
 
