@@ -13,7 +13,7 @@ import ru.yandex.practicum.filmorate.exceptions.UserDoesNotExistException;
 import ru.yandex.practicum.filmorate.model.User;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -37,7 +37,7 @@ public class UserControllerTest {
     // Проверка получения списка всех пользователей
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenGetAllThenStatus200andListReturned() throws Exception {
+    public void shouldReturn200andListOnGetAllWhenValidUser() throws Exception {
         //given
         postValidUser();
 
@@ -48,7 +48,7 @@ public class UserControllerTest {
 
                 //then
                 .andExpect(status().isOk())
-                .andExpect(content().json(objectMapper.writeValueAsString(Arrays.asList(VALID_USER))))
+                .andExpect(content().json(objectMapper.writeValueAsString(List.of(VALID_USER))))
                 .andExpect(jsonPath("length()").value(1))
                 .andExpect(jsonPath("$[0].id").value(1))
                 .andExpect(jsonPath("$[0].email").value("1@yandex.ru"))
@@ -61,13 +61,13 @@ public class UserControllerTest {
     // Проверка добавления валидного пользователя
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenPostThenStatus200andUserReturned() throws Exception {
+    public void shouldReturn200andUserOnPostUserWhenValidUser() throws Exception {
         //when
         mockMvc.perform(
-                post("/users")
-                        .content(objectMapper.writeValueAsString(VALID_USER))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        post("/users")
+                                .content(objectMapper.writeValueAsString(VALID_USER))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isOk())
@@ -82,7 +82,7 @@ public class UserControllerTest {
     // Проверка обновления валидного пользователя
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenPutThenStatus200andUserReturned() throws Exception {
+    public void shouldReturn200andUserOnPutUserWhenValidUser() throws Exception {
         //given
         postValidUser();
 
@@ -90,10 +90,10 @@ public class UserControllerTest {
 
         //when
         mockMvc.perform(
-                put("/users")
-                        .content(objectMapper.writeValueAsString(updatedUser))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        put("/users")
+                                .content(objectMapper.writeValueAsString(updatedUser))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isOk())
@@ -107,16 +107,16 @@ public class UserControllerTest {
     // Проверка добавления валидного пользователя с пустым именем
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenUserWithBlankNameWhenPostThenStatus200andUserReturnedWithNameLogin() throws Exception {
+    public void shouldReturn200andUserWithNameLoginOnPostUserWhenValidUser() throws Exception {
         //given
         User user = new User(1, "1@yandex.ru", "login", "", BIRTHDAY);
 
         //when
         mockMvc.perform(
-                post("/users")
-                        .content(objectMapper.writeValueAsString(user))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        post("/users")
+                                .content(objectMapper.writeValueAsString(user))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isOk())
@@ -130,7 +130,7 @@ public class UserControllerTest {
     // Проверка обновления валидного пользователя с пустым именем
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenUserWithBlankNameWhenPutThenStatus200andUserReturnedWithNameLogin() throws Exception {
+    public void shouldReturn200andUserWithNameLoginOnPutUserWhenValidUser() throws Exception {
         //given
         postValidUser();
 
@@ -138,10 +138,10 @@ public class UserControllerTest {
 
         //when
         mockMvc.perform(
-                put("/users")
-                        .content(objectMapper.writeValueAsString(updatedUser))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        put("/users")
+                                .content(objectMapper.writeValueAsString(updatedUser))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isOk())
@@ -155,7 +155,7 @@ public class UserControllerTest {
     // Проверка обновления пользователя с несуществующим id (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenNonExistentUserWhenPutThenStatus404andUserDoesNotExistException() throws Exception {
+    public void shouldReturn404OnPutUserWhenInvalidUserId() throws Exception {
         //given
         postValidUser();
 
@@ -163,10 +163,10 @@ public class UserControllerTest {
 
         //when
         mockMvc.perform(
-                put("/users")
-                        .content(objectMapper.writeValueAsString(updatedUser))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        put("/users")
+                                .content(objectMapper.writeValueAsString(updatedUser))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isNotFound())
@@ -177,16 +177,16 @@ public class UserControllerTest {
 
     // Проверка добавления пользователя с пустой электронной почтой (ожидается статус 400 Bad Request)
     @Test
-    public void givenUserWithBlankEmailWhenPostThenStatus400() throws Exception {
+    public void shouldReturn400OnPostUserWhenEmptyUserEmail() throws Exception {
         //given
         User user = new User(1, "", "login", "name", BIRTHDAY);
 
         //when
         mockMvc.perform(
-                post("/users")
-                        .content(objectMapper.writeValueAsString(user))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        post("/users")
+                                .content(objectMapper.writeValueAsString(user))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isBadRequest());
@@ -195,7 +195,7 @@ public class UserControllerTest {
     // Проверка обновления пользователя с пустой электронной почтой (ожидается статус 400 Bad Request)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenUserWithBlankEmailWhenPutThenStatus400() throws Exception {
+    public void shouldReturn400OnPutUserWhenEmptyUserEmail() throws Exception {
         //given
         postValidUser();
 
@@ -203,10 +203,10 @@ public class UserControllerTest {
 
         //when
         mockMvc.perform(
-                put("/users")
-                        .content(objectMapper.writeValueAsString(updatedUser))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        put("/users")
+                                .content(objectMapper.writeValueAsString(updatedUser))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isBadRequest());
@@ -214,16 +214,16 @@ public class UserControllerTest {
 
     // Проверка добавления пользователя с некорректной электронной почтой (ожидается статус 400 Bad Request)
     @Test
-    public void givenUserWithWrongEmailWhenPostThenStatus400() throws Exception {
+    public void shouldReturn400OnPostUserWhenInvalidUserEmail() throws Exception {
         //given
         User user = new User(1, "email@", "login", "name", BIRTHDAY);
 
         //when
         mockMvc.perform(
-                post("/users")
-                        .content(objectMapper.writeValueAsString(user))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        post("/users")
+                                .content(objectMapper.writeValueAsString(user))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isBadRequest());
@@ -232,7 +232,7 @@ public class UserControllerTest {
     // Проверка обновления пользователя с некорректной электронной почтой (ожидается статус 400 Bad Request)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenUserWithWrongEmailWhenPutThenStatus400() throws Exception {
+    public void shouldReturn400OnPutUserWhenInvalidUserEmail() throws Exception {
         //given
         postValidUser();
 
@@ -240,10 +240,10 @@ public class UserControllerTest {
 
         //when
         mockMvc.perform(
-                put("/users")
-                        .content(objectMapper.writeValueAsString(updatedUser))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        put("/users")
+                                .content(objectMapper.writeValueAsString(updatedUser))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isBadRequest());
@@ -251,16 +251,16 @@ public class UserControllerTest {
 
     // Проверка добавления пользователя с пустым логином (ожидается статус 400 Bad Request)
     @Test
-    public void givenUserWithBlankLoginWhenPostThenStatus400() throws Exception {
+    public void shouldReturn400OnPostUserWhenEmptyUserLogin() throws Exception {
         //given
         User user = new User(1, "1@yandex.ru", "", "name", BIRTHDAY);
 
         //when
         mockMvc.perform(
-                post("/users")
-                        .content(objectMapper.writeValueAsString(user))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        post("/users")
+                                .content(objectMapper.writeValueAsString(user))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isBadRequest());
@@ -269,7 +269,7 @@ public class UserControllerTest {
     // Проверка обновления пользователя с пустым логином (ожидается статус 400 Bad Request)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenUserWithBlankLoginWhenPutThenStatus400() throws Exception {
+    public void shouldReturn400OnPutUserWhenEmptyUserLogin() throws Exception {
         //given
         postValidUser();
 
@@ -277,10 +277,10 @@ public class UserControllerTest {
 
         //when
         mockMvc.perform(
-                put("/users")
-                        .content(objectMapper.writeValueAsString(updatedUser))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        put("/users")
+                                .content(objectMapper.writeValueAsString(updatedUser))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isBadRequest());
@@ -288,16 +288,16 @@ public class UserControllerTest {
 
     // Проверка добавления пользователя с логином, сожержащим пробел (ожидается статус 400 Bad Request)
     @Test
-    public void givenUserWithSpaceInLoginWhenPostThenStatus400() throws Exception {
+    public void shouldReturn400OnPostUserWhenUserLoginWithSpace() throws Exception {
         //given
         User user = new User(1, "1@yandex.ru", "l ogin", "name", BIRTHDAY);
 
         //when
         mockMvc.perform(
-                post("/users")
-                        .content(objectMapper.writeValueAsString(user))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        post("/users")
+                                .content(objectMapper.writeValueAsString(user))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isBadRequest());
@@ -306,7 +306,7 @@ public class UserControllerTest {
     // Проверка обновления пользователя с логином, сожержащим пробел (ожидается статус 400 Bad Request)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenUserWithSpaceInLoginWhenPutThenStatus400() throws Exception {
+    public void shouldReturn400OnPutUserWhenUserLoginWithSpace() throws Exception {
         //given
         postValidUser();
 
@@ -314,10 +314,10 @@ public class UserControllerTest {
 
         //when
         mockMvc.perform(
-                put("/users")
-                        .content(objectMapper.writeValueAsString(updatedUser))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        put("/users")
+                                .content(objectMapper.writeValueAsString(updatedUser))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isBadRequest());
@@ -325,16 +325,16 @@ public class UserControllerTest {
 
     // Проверка добавления пользователя с днем рождения в будущем (ожидается статус 400 Bad Request)
     @Test
-    public void givenUserWithBirthdayInFutureWhenPostThenStatus400() throws Exception {
+    public void shouldReturn400OnPostUserWhenFutureUserBirthday() throws Exception {
         //given
         User user = new User(1, "1@yandex.ru", "login", "name", FUTURE_DATE);
 
         //when
         mockMvc.perform(
-                post("/users")
-                        .content(objectMapper.writeValueAsString(user))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        post("/users")
+                                .content(objectMapper.writeValueAsString(user))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isBadRequest());
@@ -343,7 +343,7 @@ public class UserControllerTest {
     // Проверка обновления пользователя с днем рождения в будущем (ожидается статус 400 Bad Request)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenUserWithBirthdayInFutureWhenPutThenStatus400() throws Exception {
+    public void shouldReturn400OnPutUserWhenFutureUserBirthday() throws Exception {
         //given
         postValidUser();
 
@@ -351,10 +351,10 @@ public class UserControllerTest {
 
         //when
         mockMvc.perform(
-                put("/users")
-                        .content(objectMapper.writeValueAsString(updatedUser))
-                        .contentType(MediaType.APPLICATION_JSON)
-        )
+                        put("/users")
+                                .content(objectMapper.writeValueAsString(updatedUser))
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
 
                 //then
                 .andExpect(status().isBadRequest());
@@ -363,7 +363,7 @@ public class UserControllerTest {
     // Проверка получения пользователя по валидному id
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidIdWhenGetThenStatus200andUserReturned() throws Exception {
+    public void shouldReturn200AndUserOnGetUserWhenValidUserId() throws Exception {
         //given
         postValidUser();
         Integer id = 1;
@@ -386,7 +386,7 @@ public class UserControllerTest {
     // Проверка получения пользователя по неправильному id (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenInvalidIdWhenGetThenStatus404andUserDoesNotExistException() throws Exception {
+    public void shouldReturn404OnGetUserWhenInvalidUserId() throws Exception {
         //given
         postValidUser();
         Integer id = 2;
@@ -406,7 +406,7 @@ public class UserControllerTest {
     // Проверка добавления в друзья
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenPutFriendThenStatus200andMessage() throws Exception {
+    public void shouldReturn200AndListOnPutFriendWhenValidUserIdAndFriendId() throws Exception {
         //given
         postValidUser();
         postValidUser();
@@ -420,19 +420,27 @@ public class UserControllerTest {
 
                 //then
                 .andExpect(status().isOk())
-                .andExpect(content().string("Пользователь с id 1 стал другом пользователя с id 2."));
-
-        mockMvc.perform(
-                get("/users/{id}", id)
-        )
-                .andExpect(jsonPath("$.friends.length()").value(1))
-                .andExpect(jsonPath("$.friends[0]").value("2"));
+                .andExpect(jsonPath("$.length()").value(2))
+                .andExpect(jsonPath("$[0].id").value(1))
+                .andExpect(jsonPath("$[0].email").value("1@yandex.ru"))
+                .andExpect(jsonPath("$[0].login").value("login"))
+                .andExpect(jsonPath("$[0].birthday").value(BIRTHDAY.toString()))
+                .andExpect(jsonPath("$[0].name").value("name"))
+                .andExpect(jsonPath("$[0].friends.length()").value(1))
+                .andExpect(jsonPath("$[0].friends[0]").value(2))
+                .andExpect(jsonPath("$[1].id").value(2))
+                .andExpect(jsonPath("$[1].email").value("1@yandex.ru"))
+                .andExpect(jsonPath("$[1].login").value("login"))
+                .andExpect(jsonPath("$[1].birthday").value(BIRTHDAY.toString()))
+                .andExpect(jsonPath("$[1].name").value("name"))
+                .andExpect(jsonPath("$[1].friends.length()").value(1))
+                .andExpect(jsonPath("$[1].friends[0]").value(1));
     }
 
     // Проверка добавления в друзья по неправильному id (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenPutFriendWrongIdThenStatus404andUserDoesNotExistException() throws Exception {
+    public void shouldReturn404OnPutFriendWhenInvalidUserId() throws Exception {
         //given
         postValidUser();
         postValidUser();
@@ -454,7 +462,7 @@ public class UserControllerTest {
     // Проверка добавления в друзья по неправильному id друга (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenPutFriendWrongFriendIdThenStatus404andUserDoesNotExistException() throws Exception {
+    public void shouldReturn404OnPutFriendWhenInvalidFriendId() throws Exception {
         //given
         postValidUser();
         postValidUser();
@@ -476,7 +484,7 @@ public class UserControllerTest {
     // Проверка добавления в друзья себя (ожидается статус 400 Bad Request и IncorrectPathVariableException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenPutFriendHimselfThenStatus400andIncorrectPathVariableException() throws Exception {
+    public void shouldReturn400OnPutFriendWhenUserIdEqualsFriendId() throws Exception {
         //given
         postValidUser();
         Integer id = 1;
@@ -496,7 +504,7 @@ public class UserControllerTest {
     // Проверка удаления из друзей
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenDeleteFriendThenStatus200andMessage() throws Exception {
+    public void shouldReturn200AndListOnDeleteFriendWhenValidUserIdAndFriendId() throws Exception {
         //given
         postValidUser();
         postValidUser();
@@ -511,18 +519,25 @@ public class UserControllerTest {
 
                 //then
                 .andExpect(status().isOk())
-                .andExpect(content().string("Пользователь с id 1 удалил из друзей пользователя с id 2."));
-
-        mockMvc.perform(
-                        get("/users/{id}", id)
-                )
-                .andExpect(jsonPath("$.friends.length()").value(0));
+                .andExpect(jsonPath("$.length()").value(2))
+                .andExpect(jsonPath("$[0].id").value(1))
+                .andExpect(jsonPath("$[0].email").value("1@yandex.ru"))
+                .andExpect(jsonPath("$[0].login").value("login"))
+                .andExpect(jsonPath("$[0].birthday").value(BIRTHDAY.toString()))
+                .andExpect(jsonPath("$[0].name").value("name"))
+                .andExpect(jsonPath("$[0].friends.length()").value(0))
+                .andExpect(jsonPath("$[1].id").value(2))
+                .andExpect(jsonPath("$[1].email").value("1@yandex.ru"))
+                .andExpect(jsonPath("$[1].login").value("login"))
+                .andExpect(jsonPath("$[1].birthday").value(BIRTHDAY.toString()))
+                .andExpect(jsonPath("$[1].name").value("name"))
+                .andExpect(jsonPath("$[1].friends.length()").value(0));
     }
 
     // Проверка удаления из друзей по неправильному id (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenDeleteFriendWrongIdThenStatus404andUserDoesNotExistException() throws Exception {
+    public void shouldReturn404OnDeleteFriendWhenInvalidUserId() throws Exception {
         //given
         postValidUser();
         postValidUser();
@@ -546,7 +561,7 @@ public class UserControllerTest {
     // Проверка удаления из друзей по неправильному id друга (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenDeleteFriendWrongFriendIdThenStatus404andUserDoesNotExistException() throws Exception {
+    public void shouldReturn404OnDeleteFriendWhenInvalidFriendId() throws Exception {
         //given
         postValidUser();
         postValidUser();
@@ -570,7 +585,7 @@ public class UserControllerTest {
     // Проверка получения списка всех друзей
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenGetFriendsThenStatus200andListReturned() throws Exception {
+    public void shouldReturn200AndListOnGetFriendsWhenValidUserId() throws Exception {
         //given
         postValidUser();
         postValidUser();
@@ -580,25 +595,25 @@ public class UserControllerTest {
 
         //when
         mockMvc.perform(
-                        get("/users/{id}/friends", friendId)
+                        get("/users/{id}/friends", id)
                 )
 
                 //then
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("length()").value(1))
-                .andExpect(jsonPath("$[0].id").value(1))
+                .andExpect(jsonPath("$[0].id").value(2))
                 .andExpect(jsonPath("$[0].email").value("1@yandex.ru"))
                 .andExpect(jsonPath("$[0].login").value("login"))
                 .andExpect(jsonPath("$[0].birthday").value(BIRTHDAY.toString()))
                 .andExpect(jsonPath("$[0].name").value("name"))
-                .andExpect(jsonPath("$[0].friends[0]").value("2"))
+                .andExpect(jsonPath("$[0].friends[0]").value(1))
                 .andExpect(jsonPath("$[0].friends.length()").value(1));
     }
 
     // Проверка получения списка всех друзей по неправильному id (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenGetFriendsWrongIdThenStatus404andUserDoesNotExistException() throws Exception {
+    public void shouldReturn404OnGetFriendsWhenInvalidUserId() throws Exception {
         //given
         postValidUser();
         postValidUser();
@@ -621,7 +636,7 @@ public class UserControllerTest {
     // Проверка получения списка общих друзей
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenGetCommonFriendsThenStatus200andListReturned() throws Exception {
+    public void shouldReturn200AndListOnGetCommonFriendsWhenValidUserIdAndOtherId() throws Exception {
         //given
         postValidUser();
         postValidUser();
@@ -645,15 +660,15 @@ public class UserControllerTest {
                 .andExpect(jsonPath("$[0].login").value("login"))
                 .andExpect(jsonPath("$[0].birthday").value(BIRTHDAY.toString()))
                 .andExpect(jsonPath("$[0].name").value("name"))
-                .andExpect(jsonPath("$[0].friends[0]").value("1"))
-                .andExpect(jsonPath("$[0].friends[1]").value("2"))
-                .andExpect(jsonPath("$[0].friends.length()").value("2"));
+                .andExpect(jsonPath("$[0].friends[0]").value(1))
+                .andExpect(jsonPath("$[0].friends[1]").value(2))
+                .andExpect(jsonPath("$[0].friends.length()").value(2));
     }
 
     // Проверка получения списка списка общих друзей по неправильному id (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenGetCommonWrongIdThenStatus404andUserDoesNotExistException() throws Exception {
+    public void shouldReturn404OnGetCommonFriendsWhenInvalidUserId() throws Exception {
         //given
         postValidUser();
         postValidUser();
@@ -680,7 +695,7 @@ public class UserControllerTest {
     // Проверка получения списка списка общих друзей по неправильному id (ожидается статус 404 Not Found и UserDoesNotExistException)
     @Test
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.AFTER_METHOD)
-    public void givenValidUserWhenGetCommonWrongFriendIdThenStatus404andUserDoesNotExistException() throws Exception {
+    public void shouldReturn404OnGetCommonFriendsWhenInvalidOtherId() throws Exception {
         //given
         postValidUser();
         postValidUser();
